# helix-ai-studio

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  HelixAIStudio.py  HelixAIStudio.spec  INSTALL.md  LICENSE  PROGRESS_v11.0.0.md  PROJECT_BIBLE.md  README.ja.md  README.md  README_ja.md  SECURITY.md  SETUP_GUIDE.md  _gen_842.py  add_spdx_headers.ps1  build.bat  clear_icon_cache.bat  debug_overnight_log.md  docker-compose.yml  helix_source_bundle.txt  install.bat  install.sh  install_all.bat  launcher.py  main.py  merge_sort.py  package.json  pyproject.toml  render.yaml  requirements.txt  run.py  start.bat  version_info.txt  スクショ.lnk
.claude/: settings.local.json
.github/: pull_request_template.md
BIBLE/: BIBLE_Helix AI Studio_1.0.0.md  BIBLE_Helix AI Studio_3.7.0.md  BIBLE_Helix AI Studio_3.8.0.md  BIBLE_Helix AI Studio_3.9.0.md  BIBLE_Helix AI Studio_3.9.1.md  BIBLE_Helix AI Studio_3.9.2.md  BIBLE_Helix AI Studio_3.9.3.md  BIBLE_Helix AI Studio_3.9.4.md  BIBLE_Helix AI Studio_3.9.5.md  BIBLE_Helix AI Studio_3.9.6.md  BIBLE_Helix AI Studio_4.0.0.md  BIBLE_Helix AI Studio_4.1.0.md  BIBLE_Helix AI Studio_4.2.0.md  BIBLE_Helix AI Studio_4.3.0.md  BIBLE_Helix AI Studio_4.4.0.md  BIBLE_Helix AI Studio_4.5.0.md  BIBLE_Helix AI Studio_4.6.0.md  BIBLE_Helix AI Studio_5.0.0.md  BIBLE_Helix AI Studio_5.1.0.md  BIBLE_Helix AI Studio_5.2.0.md  BIBLE_Helix AI Studio_6.1.0.md  BIBLE_Helix AI Studio_6.2.0.md  BIBLE_Helix AI Studio_6.3.0.md  BIBLE_Helix AI Studio_7.0.0.md  BIBLE_Helix AI Studio_7.1.0.md  BIBLE_Helix AI Studio_7.2.0.md  BIBLE_Helix AI Studio_8.0.0.md  (+6 more)
(+397 files in other folders)
